--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -5,7 +5,7 @@
   line-height: 29px;
   color: #000000;
   margin: 0;
-  padding: 35px 0 15px 36px;
+  padding-bottom: 47px;
 }
 
 @media screen and (max-width: 560px) {
